Bug 530824 - Move away of methods deprecated in Java 9
* Number constructors
* Class.newInstance

... and some minor cleanups (generification, lambdas) in the code
surrounding the changes.

Change-Id: I428b2b77b0556a6f8af7656d3746eefb4b4d8ca1
Signed-off-by: Alexander Kurtakov <akurtako@redhat.com>